--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav ul.circular-menu li {
 
 nav ul.circular-menu li a {
     display: block;
-    width: 100px;
+    width: 150px; /* Augmenté pour permettre plus de texte */
     height: 100px;
     line-height: 100px;
     border-radius: 50%;
