--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ nav ul.circular-menu li {
 
 nav ul.circular-menu li a {
     display: block;
-    width: 150px; /* Augmenté pour permettre plus de texte */
+    width: 150px;
     height: 100px;
     line-height: 100px;
     border-radius: 50%;
@@ -132,4 +132,70 @@ footer {
 .container {
     width: 80%;
     margin: 0 auto;
+}
+
+/* Media Queries for Responsive Design */
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 1.5em;
+    }
+
+    header p {
+        font-size: 1em;
+    }
+
+    nav ul.circular-menu li a {
+        width: 100px;
+        height: 70px;
+        line-height: 70px;
+    }
+
+    .intro h2 {
+        font-size: 1.5em;
+    }
+
+    .intro p {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 480px) {
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul.circular-menu li {
+        margin: 5px 0;
+    }
+
+    nav ul.circular-menu li a {
+        width: 80px;
+        height: 60px;
+        line-height: 60px;
+        font-size: 0.9em;
+    }
+
+    .header-text {
+        padding: 10px;
+    }
+
+    header h1 {
+        font-size: 1.2em;
+    }
+
+    header p {
+        font-size: 0.9em;
+    }
+
+    .intro h2 {
+        font-size: 1.2em;
+    }
+
+    .intro p {
+        font-size: 0.9em;
+    }
+
+    .container {
+        width: 90%;
+    }
 }
